--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "engines": {
     "node": ">=14"
   },
-  "type": "module",
+  "type": "commonjs",
   "displayName": "Node Project Template",
   "description": "Template for creating Node.js projects including docs and a deploy pipeline",
   "author": "MichaelCurrin",
