--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "node-project-template",
+  "name": "project",
   "version": "1.3.0",
   "scripts": {
-    "lint:check": "eslint .",
+    "lint:check": "eslint",
     "lint:fix": "eslint . --fix",
     "test": "echo 'TODO: Add a test runner and then update this command'",
     "serve": "echo 'TODO: Add your serve command here",
@@ -20,20 +20,8 @@
   },
   "type": "commonjs",
   "displayName": "Project",
-  "description": "Template for creating Node.js projects including docs and a deploy pipeline",
-  "author": "MichaelCurrin",
-  "license": "MIT",
-  "homepage": "https://github.com/MichaelCurrin/node-project-template#readme",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MichaelCurrin/node-project-template"
-  },
-  "bugs": "https://github.com/MichaelCurrin/node-project-template/issues",
-  "keywords": [
-    "template",
-    "skeleton",
-    "quickstart"
-  ],
+  "description": "Project I guess?",
+  "author": "Yannai Fischer",
   "dependencies": {
     "babel": "^6.23.0",
     "express": "^4.18.2"
