--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "dependencies": {
     "babel": "^6.23.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "lodash": "^4.17.21"
   }
 }
