--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "node-project-template",
+  "name": "project",
   "version": "1.3.0",
   "scripts": {
     "lint:check": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint:fix": "eslint --fix",
     "test": "echo 'TODO: Add a test runner and then update this command'",
     "serve": "echo 'TODO: Add your serve command here",
     "start": "npm run serve",
@@ -21,20 +21,12 @@
   },
   "type": "module",
   "displayName": "Project",
-  "description": "Template for creating Node.js projects including docs and a deploy pipeline",
-  "author": "MichaelCurrin",
-  "license": "MIT",
-  "homepage": "https://github.com/MichaelCurrin/node-project-template#readme",
+  "description": "Yannai's project",
+  "author": "Yannai Fischer ",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MichaelCurrin/node-project-template"
+    "url": "https://github.com/yannai-fischer/project"
   },
-  "bugs": "https://github.com/MichaelCurrin/node-project-template/issues",
-  "keywords": [
-    "template",
-    "skeleton",
-    "quickstart"
-  ],
   "dependencies": {
     "babel": "^6.23.0",
     "express": "^4.18.2",
