--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project",
   "version": "1.3.0",
   "scripts": {
-    "lint:check": "eslint .",
+    "lint:check": "eslint",
     "lint:fix": "eslint --fix",
     "test": "echo 'TODO: Add a test runner and then update this command'",
     "serve": "echo 'TODO: Add your serve command here",
@@ -13,6 +13,7 @@
     "postversion": "git push --follow-tags"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "eslint": "^7.7.0",
     "mongodb": "^4.13.0"
   },
